Add coverall - test coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,9 @@ python:
 # command to install dependencies
 install:
   - pip install .
+  - pip install coveralls
 # command to run tests
-script: nosetests
+script:
+  coverage run --source=simplepeg setup.py test
+after_success:
+  coveralls
