--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,5 @@
 language: python
 python:
   - "2.7"
-# command to install dependencies
-install:
-  - pip install .
-  - pip install coveralls
-# command to run tests
-script:
-  coverage run --omit=*/tests/* --source=simplepeg setup.py test
-after_success:
-  coveralls
+install: pip install tox-travis
+script: tox
