--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,11 @@
 [tox]
 envlist=py27
+
 [testenv]
 changedir=tests
-deps=pytest
-commands=py.test --basetemp={envtmpdir}
+deps=
+    pytest
+    pytest-cov
+    coveralls
+commands=py.test --basetemp={envtmpdir} --cov-config .coveragerc --cov=simplepeg
 setenv = PYTHONPATH = {toxinidir}
